Make sure we don't treat a non-sorted vector as sorted

BUG: 388313