libdiscover/Category/CategoryModel.cpp
@@ -53,6 +53,7 @@ void CategoryModel::populateCategories()
 
         if(ret.isEmpty()) {
             ret = cats;
+            Category::sortCategories(ret);
         } else {
             Q_FOREACH (Category* c, cats)
                 Category::addSubcategory(ret, c);
